Correction image logo non trouvée

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div>
       <a href="file:///C:/Users/eleve/Desktop/Projet%201SN/index.html"></a>
-      <a href="http://www.sion91.fr/" class="img2"> <img src="IMG/NDS.jpg"> </a>
+      <a href="http://www.sion91.fr/" class="img2"> <img src="img/NDS.jpg"> </a>
     </div>
 </body>
 </html>
